--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Contactable</title>
   </head>
   <body>
-    <!-- Happy coding -->
+    <div id="root"></div>
   </body>
+  <script type="module" src="./index.js"></script>
 </html>
