ADD: sessions styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <main class="session-container">
+        <h1 class="session__title">Login</h1>
+        <hr>
+        <form class="session__form">
+          <div class="form__input-container">
+            <input type="text" placeholder="email" class="session__input">
+            <input type="password" placeholder="password" class="session__input">
+          </div>
+          <div class="session__buttons">
+            <hr>
+            <a href="#" class="button__link">Signup</a>
+            <button class="button__link" type="submit">Login</button>
+          </div>
+        </form>
+      </main>
+    </div>
   </body>
-  <script type="module" src="./index.js"></script>
+  <!-- <script type="module" src="./index.js"></script> -->
 </html>
