--- a/index.html
+++ b/index.html
@@ -8,21 +8,63 @@
   </head>
   <body>
     <div id="root">
-      <main class="session-container">
+      <!-- <main class="session-container">
         <h1 class="session__title">Login</h1>
-        <hr>
+        <hr class="hr">
         <form class="session__form">
           <div class="form__input-container">
             <input type="text" placeholder="email" class="session__input">
             <input type="password" placeholder="password" class="session__input">
           </div>
           <div class="session__buttons">
-            <hr>
+            <hr class="hr">
             <a href="#" class="button__link">Signup</a>
             <button class="button__link" type="submit">Login</button>
           </div>
         </form>
+      </main> -->
+
+      <header class="header">
+        <h1 class="header__title">Contactable</h1>
+        <a href="#" class="button__link">Logout</a>
+      </header>
+      <main class="container__contacts">
+        <h2 class="contacts__title">contacts(10)</h2>
+        <hr class="hr">
+        <ul class="contacts__list">
+          <li class="list__element">
+            <div class="contacts__info">
+              <img class="info__avatar" src="images/person.svg" alt="contact-avatar">
+              <p class="info__name">Andrew Clark</p>
+            </div>
+            <div class="contacts__icon">
+              <img class="contacts__favorite" src="images/star.svg" alt="star-icon">
+            </div>
+          </li>
+          <li class="list__element">
+            <div class="contacts__info">
+              <img class="info__avatar" src="images/person.svg" alt="contact-avatar">
+              <p class="info__name">Andrew Clark</p>
+            </div>
+            <div class="contacts__icon">
+              <img class="contacts__favorite" src="images/star.svg" alt="star-icon">
+            </div>
+          </li>
+          <li class="list__element">
+            <div class="contacts__info">
+              <img class="info__avatar" src="images/person.svg" alt="contact-avatar">
+              <p class="info__name">Andrew Clark</p>
+            </div>
+            <div class="contacts__icon">
+              <img class="contacts__favorite" src="images/star.svg" alt="star-icon">
+            </div>
+          </li>
+        </ul>
+        <div class="container__buttonAdd">
+          <img class="buttonAdd" src="images/add.svg" alt="add-icon">
+        </div>
       </main>
+
     </div>
   </body>
   <!-- <script type="module" src="./index.js"></script> -->
