ADD: contact detail styles

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div id="root">
       <header class="header">
-        <h1 class="header__title">Create new contact</h1>
+        <h1 class="header__title">Contact Detail</h1>
         <a href="#" class="button__link">Logout</a>
       </header>
-      <main class="session-container">
+      <!-- <main class="session-container">
         <form class="session__form">
           <div class="form__input-container">
             <input type="text" placeholder="Name" class="session__input">
@@ -32,7 +32,7 @@
             <button class="button__link" type="submit">Login</button>
           </div>
         </form>
-      </main>
+      </main> -->
 
       <!-- <main class="session-container">
         <h1 class="session__title">Login</h1>
@@ -87,6 +87,17 @@
         </div>
       </main> -->
 
+      <main class="container-contact">
+        <div class="contact__info">
+          <img class="contact__avatar" src="images/person.svg" alt="icon-avatar">
+          <p class="contact__name">Brian Vaugh</p>
+          <p class="contact__relation">Friends</p>
+        </div>
+        <div class="contact__detail">
+          <p class="contact__text">Numbers: <span class="text">987654321</span></p>
+          <p class="contact__text">Email: <span class="text">brian@react.com</span></p>
+        </div>
+      </main>
 
     </div>
   </body>
