CHORE: commented html structures

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="root">
-      <header class="header">
+      <!-- <header class="header">
         <h1 class="header__title">Contact Detail</h1>
         <a href="#" class="button__link">Logout</a>
-      </header>
+      </header> -->
       <!-- <main class="session-container">
         <form class="session__form">
           <div class="form__input-container">
@@ -87,7 +87,7 @@
         </div>
       </main> -->
 
-      <main class="container-contact">
+      <!-- <main class="container-contact">
         <div class="contact__info">
           <img class="contact__avatar" src="images/person.svg" alt="icon-avatar">
           <p class="contact__name">Brian Vaugh</p>
@@ -97,7 +97,7 @@
           <p class="contact__text">Numbers: <span class="text">987654321</span></p>
           <p class="contact__text">Email: <span class="text">brian@react.com</span></p>
         </div>
-      </main>
+      </main> -->
 
     </div>
   </body>
